RESOLVED FIXED267568
incorrect repaint area for underline text decorations
https://bugs.webkit.org/show_bug.cgi?id=267568
Summary incorrect repaint area for underline text decorations
Fujii Hironori
Reported 2024-01-15 23:20:37 PST
Created attachment 469410 [details] test case incorrect a repaint area for underline text decorations
Attachments
test case (234 bytes, text/html)
2024-01-15 23:20 PST, Fujii Hironori
no flags
(another) test case (261 bytes, text/html)
2024-01-16 13:52 PST, alan
no flags
Patch (4.48 KB, patch)
2024-01-16 16:07 PST, alan
no flags
[fast-cq]Patch (4.47 KB, patch)
2024-01-16 16:12 PST, alan
no flags
alan
Comment 1 2024-01-16 13:52:54 PST
Created attachment 469421 [details] (another) test case
alan
Comment 2 2024-01-16 13:53:07 PST
This is a good find! Thank you.
alan
Comment 3 2024-01-16 16:07:16 PST
alan
Comment 4 2024-01-16 16:12:26 PST
Created attachment 469427 [details] [fast-cq]Patch
Radar WebKit Bug Importer
Comment 5 2024-01-16 16:13:01 PST
EWS
Comment 6 2024-01-17 06:55:12 PST
Committed 273126@main (29b480f1c834): <https://commits.webkit.org/273126@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469427 [details].
Note You need to log in before you can comment on or make changes to this bug.