incorrect repaint area for underline text decorations https://bugs.webkit.org/show_bug.cgi?id=267568

Reviewed by Antti Koivisto.

Text decoration style (thickness etc) is on the parent inline box (or block container) and not on the text box's style.

* LayoutTests/fast/repaint/text-decoration-underline-repaint-expected.txt: Added.
* LayoutTests/fast/repaint/text-decoration-underline-repaint.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::collectInkOverflowForTextDecorations):

Canonical link: https://commits.webkit.org/273126@main